work in progress - added link and csv - need to focus on data

--- a/app/views/campaigns/index.html.haml
+++ b/app/views/campaigns/index.html.haml
@@ -33,7 +33,7 @@
           %tr
             %td.title
               = link_to campaign.title, "/campaigns/#{campaign.slug}/overview"
-            %td 
+            %td
               = link_to 'students', "/campaigns/#{campaign.slug}/students.csv"
             %td
               = link_to 'students by course', "/campaigns/#{campaign.slug}/students.csv?course=true"
@@ -43,3 +43,5 @@
               = link_to 'course data', "/campaigns/#{campaign.slug}/courses.csv"
             %td
               = link_to 'pages edited', "/campaigns/#{campaign.slug}/articles_csv.csv"
+            %td
+              = link_to 'all edits', "/campaigns/#{campaign.slug}/all_edits.csv"
